# fb-ffi-bridge-poc

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  results.json
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/: CMakeLists.txt  batch_messages.cpp  simple_json.cpp  simple_message.cpp
fbs/: player_events.fbs
rust-fb/: Cargo.toml  bindings.h  build.rs
rust-fb/src/: lib.rs  player_events_generated.rs
src/: CMakeLists.txt  lib.cpp  lib.h  player_events_generated.h  util_functions.h
